bug fix: impossible to swipe on iPhone

--- a/assembl/static/css/_mobile.scss
+++ b/assembl/static/css/_mobile.scss
@@ -40,6 +40,7 @@ $panelHeaderTitleHeight:50px;
     
     body{
         overflow:hidden;
+        -webkit-overflow-scrolling: touch;
     }
     #wrapper{
         overflow:hidden;
